fixed overlap for long addresses

--- a/src/components/Forms/Forms.css
+++ b/src/components/Forms/Forms.css
@@ -169,6 +169,7 @@
   width: 50%;
   word-wrap: break-word;
   height: auto;
+  overflow: hidden;
 }
 
 
